[package]
name = "conn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.5"
chrono = "0.4.26"
tokio = {version = "1.28.2", features = ["rt", "rt-multi-thread", "time", "macros", "full"] } 
tokio-test = "0.4.2"
async-trait = "0.1.68"
thiserror = "1.0"
log = "0.4"
event-emitter = {path="../event-emitter"}
