[package]
name = "rs-connections"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A brief description of your package"
repository = "https://github.com/Shcarp/rs-connection.git"

[dependencies]
websocket = "0.26.5"
chrono = "0.4.26"
tokio = {version = "1.28.2", features = ["rt", "rt-multi-thread", "time", "macros", "full"] } 
tokio-test = "0.4.2"
async-trait = "0.1.68"
thiserror = "1.0"
log = "0.4"
